# blender

source/blender/: CMakeLists.txt
source/blender/blenkernel/: BKE_blendfile.hh  BKE_idprop.hh  BKE_main.hh
source/blender/blenkernel/intern/: blendfile.cc  idprop.cc  idprop_create.cc  lib_id.cc  library.cc  main.cc
source/blender/blenlib/: BLI_set.hh
source/blender/editors/space_sequencer/: sequencer_clipboard.cc
source/blender/makesdna/: DNA_ID.h
source/blender/makesrna/intern/: rna_access.cc  rna_access_compare_override.cc  rna_userdef.cc
source/blender/nodes/intern/: geometry_nodes_execute.cc
source/blender/ortholab_model/: CMakeLists.txt  base_helpers.cpp  base_helpers.h  base_types.h  cmesh.h  extrusion.cpp  extrusion.h  file_services.cpp  file_services.h  function.cpp  function.h  kvstore.cpp  kvstore.h  manu_asm_guide.cpp  manu_asm_guide.h  mesh_io.cpp  mesh_io.h  meshing.cpp  meshing.h  object.cpp  object.h  ortholab_model.cpp  ortholab_model.h  ortholab_model_tests.cpp  pad.cpp  pad.h  project.cpp  project.h  ramp.cpp  ramp.h  save.cpp  save.h  scene_object.cpp  scene_object.h  smooth_mesh.cpp  smooth_mesh.h  solver.h  teeth.cpp  teeth.h  timer.h  (+8 more)
source/blender/python/generic/: idprop_py_api.cc
